links work better

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 		Thomas O'Brien | thomasobrien99@gmail.com | 206.384.1993
 		</div>
 		<div class="col span_3_of_12 icons">
-		<i class="fa fa-envelope" aria-hidden="true"></i>
-		<i class="fa fa-github" aria-hidden="true"></i>
-		<i class="fa fa-linkedin-square" aria-hidden="true"></i>
+		<a ng-href="mailto:thomasobrien99@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+		<a ng-href="https://github.com/thomasobrien99"><i class="fa fa-github" aria-hidden="true"></i></a>
+		<a ng-href="https://www.linkedin.com/in/thomasobrien99"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
 		</div>
 		<div class="col span_1_of_12"></div>
 	</div>
