--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 	</div>
 </footer>
 
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
 <script src="js/ui-bootstrap-tpls-1.3.3.js"></script>
 
 <script src="js/app.js"></script>
