take out html5 mode

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		</div>
 		
 		<div class="col span_3_of_12 little-nav">
-			<a ng-href="/">
+			<a ng-href="/#/">
 				Projects
 			</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-			<a ng-href="/about">
+			<a ng-href="/#about">
 				About
 			</a>
 		</div>
