--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
 <script src="js/ui-bootstrap-tpls-1.3.3.js"></script>
 
